--- a/libs/PlainText_Core/tests/CMakeLists.txt
+++ b/libs/PlainText_Core/tests/CMakeLists.txt
@@ -27,3 +27,5 @@ endfunction()
 #================= Tests ====================
 
 addPlainTextTest("FileInputIteratorTest")
+addPlainTextTest("FileMultiPassIteratorTest")
+addPlainTextTest("StringIteratorTest")
