In lib PlainText_Core: implemented Record, bugfix in BoostQtTraits, created CsvParser* classes

--- a/libs/PlainText_Core/tests/CMakeLists.txt
+++ b/libs/PlainText_Core/tests/CMakeLists.txt
@@ -29,3 +29,6 @@ endfunction()
 addPlainTextTest("FileInputIteratorTest")
 addPlainTextTest("FileMultiPassIteratorTest")
 addPlainTextTest("StringIteratorTest")
+addPlainTextTest("DataTest")
+addPlainTextTest("SettingsTest")
+addPlainTextTest("CsvParserTest")
