In lib PlainText: working on Record* classes

--- a/libs/PlainText_Core/src/CMakeLists.txt
+++ b/libs/PlainText_Core/src/CMakeLists.txt
@@ -6,6 +6,7 @@ set(SOURCE_FILES
   Mdt/PlainText/StringConstIterator.cpp
   Mdt/PlainText/RecordTemplate.cpp
   Mdt/PlainText/Record.cpp
+  Mdt/PlainText/RecordListTemplate.cpp
   Mdt/PlainText/RecordList.cpp
   Mdt/PlainText/BoostSpiritQtTraits.cpp
   Mdt/PlainText/CsvCommonSettings.cpp
