--- a/libs/PlainText_Core/src/CMakeLists.txt
+++ b/libs/PlainText_Core/src/CMakeLists.txt
@@ -15,6 +15,7 @@ set(SOURCE_FILES
   Mdt/PlainText/CsvParserSettings.cpp
   Mdt/PlainText/CsvParserTemplate.cpp
   Mdt/PlainText/CsvStringParser.cpp
+  Mdt/PlainText/CsvFileParser.cpp
 )
 
 find_package(Qt5 COMPONENTS Core)
