--- a/libs/ItemModel/tests/CMakeLists.txt
+++ b/libs/ItemModel/tests/CMakeLists.txt
@@ -54,3 +54,4 @@ addItemModelTest("KeyTest")
 addItemModelTest("RelationKeyTest")
 addItemModelTest("PrimaryKeyProxyModelTest")
 addItemModelTest("ForeignKeyProxyModelTest")
+addItemModelTest("HeaderProxyModelTest")
