--- a/libs/PlainText_Core/tests/CMakeLists.txt
+++ b/libs/PlainText_Core/tests/CMakeLists.txt
@@ -44,3 +44,4 @@ addPlainTextTest("DataTest")
 addPlainTextTest("RecordListTableModelTest")
 addPlainTextTest("SettingsTest")
 addPlainTextTest("CsvParserTest")
+addPlainTextTest("FileReaderTest")
