--- a/libs/Error_Widgets/tests/CMakeLists.txt
+++ b/libs/Error_Widgets/tests/CMakeLists.txt
@@ -8,4 +8,5 @@ find_package(Qt5
 # Target MdtError_WidgetsTest
 add_executable(mdterror_widgetstest src/ErrorWidgetsTest.cpp)
 target_link_libraries(mdterror_widgetstest Error_Widgets Application Qt5::Test)
-add_test(MdtError_WidgetsTest "${CMAKE_CURRENT_BINARY_DIR}/mdterror_widgetstest")
+add_test(NAME MdtError_WidgetsTest COMMAND mdterror_widgetstest)
+# add_test(MdtError_WidgetsTest "${CMAKE_CURRENT_BINARY_DIR}/mdterror_widgetstest")
