--- a/libs/Expected/tests/CMakeLists.txt
+++ b/libs/Expected/tests/CMakeLists.txt
@@ -7,5 +7,5 @@ find_package(Qt5
 
 # Target MdtExpectedTest
 add_executable(mdtexpectedtest src/ExpectedTest.cpp)
-add_test(MdtExpectedTest ${CMAKE_CURRENT_BINARY_DIR}/mdtexpectedtest)
+add_test(NAME MdtExpectedTest COMMAND mdtexpectedtest)
 target_link_libraries(mdtexpectedtest Expected Application Qt5::Test)
