--- a/libs/ItemEditor_Sql/tests/CMakeLists.txt
+++ b/libs/ItemEditor_Sql/tests/CMakeLists.txt
@@ -28,7 +28,8 @@ function(addItemEditorSqlTest testName)
   string(TOLOWER ${complteTestName} executableName)
   add_executable(${executableName} ${sourceFilePath})
   target_link_libraries(${executableName} mdtitemeditorsqltest)
-  add_test(${complteTestName} ${CMAKE_CURRENT_BINARY_DIR}/${executableName})
+  add_test(NAME ${complteTestName} COMMAND ${executableName})
+#   add_test(${complteTestName} ${CMAKE_CURRENT_BINARY_DIR}/${executableName})
 #  message("Test name: ${complteTestName} , src: ${sourceFilePath} , exec: ${executableName}")
 endfunction()
 
