--- a/libs/Application/tests/CMakeLists.txt
+++ b/libs/Application/tests/CMakeLists.txt
@@ -10,4 +10,5 @@ find_package(Qt5
 add_executable(mdtapplicationtest src/ApplicationTest.cpp)
 target_link_libraries(mdtapplicationtest Application)
 target_link_libraries(mdtapplicationtest Qt5::Test)
-add_test(MdtApplicationTest "${CMAKE_CURRENT_BINARY_DIR}/mdtapplicationtest")
+add_test(NAME MdtApplicationTest COMMAND mdtapplicationtest)
+# add_test(MdtApplicationTest "${CMAKE_CURRENT_BINARY_DIR}/mdtapplicationtest")
