--- a/libs/FilterExpression/tests/CMakeLists.txt
+++ b/libs/FilterExpression/tests/CMakeLists.txt
@@ -15,7 +15,8 @@ function(addFilterExpressionTest testName)
   string(TOLOWER ${complteTestName} executableName)
   add_executable(${executableName} ${sourceFilePath})
   target_link_libraries(${executableName} FilterExpression Application Qt5::Test)
-  add_test(${complteTestName} ${CMAKE_CURRENT_BINARY_DIR}/${executableName})
+  add_test(NAME ${complteTestName} COMMAND ${executableName})
+#   add_test(${complteTestName} ${CMAKE_CURRENT_BINARY_DIR}/${executableName})
 #  message("Test name: ${complteTestName} , src: ${sourceFilePath} , exec: ${executableName}")
 endfunction()
 
