--- a/libs/ItemEditor/tests/CMakeLists.txt
+++ b/libs/ItemEditor/tests/CMakeLists.txt
@@ -29,7 +29,8 @@ function(addItemEditorTest testName)
   string(TOLOWER ${complteTestName} executableName)
   add_executable(${executableName} ${sourceFilePath})
   target_link_libraries(${executableName} mdtitemeditortest)
-  add_test(${complteTestName} ${CMAKE_CURRENT_BINARY_DIR}/${executableName})
+  add_test(NAME ${complteTestName} COMMAND ${executableName})
+#   add_test(${complteTestName} ${CMAKE_CURRENT_BINARY_DIR}/${executableName})
 #  message("Test name: ${complteTestName} , src: ${sourceFilePath} , exec: ${executableName}")
 endfunction()
 
