--- a/libs/PlainText_Core/tests/CMakeLists.txt
+++ b/libs/PlainText_Core/tests/CMakeLists.txt
@@ -31,7 +31,8 @@ function(addPlainTextTest testName)
   string(TOLOWER ${complteTestName} executableName)
   add_executable(${executableName} ${sourceFilePath})
   target_link_libraries(${executableName} mdtplaintexttest)
-  add_test(${complteTestName} ${CMAKE_CURRENT_BINARY_DIR}/${executableName})
+  add_test(NAME ${complteTestName} COMMAND ${executableName})
+#   add_test(${complteTestName} ${CMAKE_CURRENT_BINARY_DIR}/${executableName})
 #  message("Test name: ${complteTestName} , src: ${sourceFilePath} , exec: ${executableName}")
 endfunction()
 
