--- a/libs/Sql/tests/CMakeLists.txt
+++ b/libs/Sql/tests/CMakeLists.txt
@@ -30,7 +30,8 @@ function(addSqlTest testName)
   string(TOLOWER ${complteTestName} executableName)
   add_executable(${executableName} ${sourceFilePath})
   target_link_libraries(${executableName} mdtsqltest)
-  add_test(${complteTestName} ${CMAKE_CURRENT_BINARY_DIR}/${executableName})
+  add_test(NAME ${complteTestName} COMMAND ${executableName})
+#   add_test(${complteTestName} ${CMAKE_CURRENT_BINARY_DIR}/${executableName})
 #  message("Test name: ${complteTestName} , src: ${sourceFilePath} , exec: ${executableName}")
 endfunction()
 
