Working on runtime dependecies for Windows

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -102,28 +102,40 @@ add_subdirectory(libs/ItemEditor_Sql)
 #################################################################################################################################################
 
 # On Windows, we have to copy external libraries to the test runtime directory
-# Why I not found a proper way to get a list of all existing tests,
-# just put some of them that have the most dependencies.
 include(MdtDependenciesUtils)
 if(WIN32 AND CMAKE_RUNTIME_OUTPUT_DIRECTORY)
+  # Because I not found a proper way to get a list of all existing tests,
+  # just put some of them that have the most dependencies.
+  mdt_copy_binary_dependencies(
+    TARGET QtSingleApplication
+    DESTINATION_DIRECTORY "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}"
+  )
+  mdt_copy_binary_dependencies(
+    TARGET Application
+    DESTINATION_DIRECTORY "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}"
+  )
   mdt_copy_binary_dependencies(
     TARGET mdterrortest
+    DESTINATION_DIRECTORY "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}"
+  )
+  mdt_copy_binary_dependencies(
+    TARGET mdterror_widgetstest
     DESTINATION_DIRECTORY "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}"
   )
   mdt_copy_binary_dependencies(
     TARGET mdtitemeditor_sqlcontrollertest
     DESTINATION_DIRECTORY "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}"
   )
-
+  # If we are doing cross-compilation,
+  # recusrsive resolving do not work
+  # We have to add manually libraries that are missing
+  if(CMAKE_CROSSCOMPILING AND MINGW)
+    mdt_find_and_copy_libraries(
+      LIBRARIES libpcre2-16-0 zlib1
+      DESTINATION_DIRECTORY "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}"
+    )
+  endif()
 endif()
-#   mdt_copy_binary_dependencies(
-#     TARGET mdterrortest
-#     DESTINATION_DIRECTORY "${CMAKE_BINARY_DIR}/bin"
-#   )
-
-mdt_install_binary_dependencies(
-  TARGET Error
-)
 
 # On Windows, we have to copy external libraries to the test runtime directory
 # if(WIN32)
