In lib Application: new helper class to implement console app main

--- a/libs/Application/src/CMakeLists.txt
+++ b/libs/Application/src/CMakeLists.txt
@@ -11,6 +11,7 @@ find_package(Qt5
 set(SOURCE_FILES
   Mdt/StandardPaths.cpp
   Mdt/Application.cpp
+  Mdt/AbstractConsoleApplicationMainFunction.cpp
 )
 
 mdt_add_library(
