Working on new deploy tool

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -107,6 +107,12 @@ add_subdirectory(libs/ItemEditor)
 add_subdirectory(libs/ItemEditor_Sql)
 
 #################################################################################################################################################
+# Tools
+#################################################################################################################################################
+
+add_subdirectory(tools)
+
+#################################################################################################################################################
 # Unit tests
 #################################################################################################################################################
 
