Working on deploy utils

--- a/libs/DeployUtils_Core/src/CMakeLists.txt
+++ b/libs/DeployUtils_Core/src/CMakeLists.txt
@@ -4,6 +4,7 @@ set(SOURCE_FILES
     Mdt/DeployUtils/SettingsCommandLineParser.cpp
     Mdt/DeployUtils/LibraryVersion.cpp
     Mdt/DeployUtils/LibraryName.cpp
+    Mdt/DeployUtils/LibraryInfo.cpp
     Mdt/DeployUtils/Library.cpp
     Mdt/DeployUtils/PathList.cpp
 )
