--- a/libs/DeployUtils_Core/tests/CMakeLists.txt
+++ b/libs/DeployUtils_Core/tests/CMakeLists.txt
@@ -28,3 +28,5 @@ endfunction()
 
 addDeployUtilsTest("PathTest")
 addDeployUtilsTest("LibraryTest")
+addDeployUtilsTest("LddParserTest")
+addDeployUtilsTest("LddWrapperTest")
