--- a/libs/DeployUtils_Core/tests/CMakeLists.txt
+++ b/libs/DeployUtils_Core/tests/CMakeLists.txt
@@ -30,3 +30,6 @@ addDeployUtilsTest("PathTest")
 addDeployUtilsTest("LibraryTest")
 addDeployUtilsTest("LddParserTest")
 addDeployUtilsTest("LddWrapperTest")
+addDeployUtilsTest("PlatformTest")
+addDeployUtilsTest("BinaryDependenciesTest")
+addDeployUtilsTest("BinaryDependenciesLddTest")
