--- a/libs/DeployUtils_Core/tests/CMakeLists.txt
+++ b/libs/DeployUtils_Core/tests/CMakeLists.txt
@@ -30,6 +30,7 @@ addDeployUtilsTest("PathTest")
 addDeployUtilsTest("LibraryTest")
 addDeployUtilsTest("LddParserTest")
 addDeployUtilsTest("LddWrapperTest")
+addDeployUtilsTest("LddDependenciesParserTest")
 addDeployUtilsTest("PlatformTest")
 addDeployUtilsTest("BinaryDependenciesTest")
 addDeployUtilsTest("BinaryDependenciesLddTest")
