Working on deploy utils

--- a/libs/DeployUtils_Core/src/CMakeLists.txt
+++ b/libs/DeployUtils_Core/src/CMakeLists.txt
@@ -16,6 +16,7 @@ set(SOURCE_FILES
     Mdt/DeployUtils/BinaryDependencies.cpp
     Mdt/DeployUtils/BinaryDependenciesImplementationInterface.cpp
     Mdt/DeployUtils/BinaryDependenciesLdd.cpp
+    Mdt/DeployUtils/FileCopier.cpp
 )
 
 find_package(Qt5 COMPONENTS Core)
