--- a/libs/DeployUtils_Core/tests/CMakeLists.txt
+++ b/libs/DeployUtils_Core/tests/CMakeLists.txt
@@ -34,3 +34,4 @@ addDeployUtilsTest("LddDependenciesParserTest")
 addDeployUtilsTest("PlatformTest")
 addDeployUtilsTest("BinaryDependenciesTest")
 addDeployUtilsTest("BinaryDependenciesLddTest")
+addDeployUtilsTest("FileCopierTest")
