--- a/libs/DeployUtils_Core/tests/CMakeLists.txt
+++ b/libs/DeployUtils_Core/tests/CMakeLists.txt
@@ -30,7 +30,9 @@ addDeployUtilsTest("PathTest")
 addDeployUtilsTest("LibraryTest")
 addDeployUtilsTest("LddParserTest")
 addDeployUtilsTest("LddWrapperTest")
+addDeployUtilsTest("ObjdumpWrapperTest")
 addDeployUtilsTest("LddDependenciesParserTest")
+addDeployUtilsTest("ObjdumpDependenciesParserTest")
 addDeployUtilsTest("PlatformTest")
 addDeployUtilsTest("BinaryDependenciesTest")
 addDeployUtilsTest("BinaryDependenciesLddTest")
