--- a/libs/DeployUtils_Core/tests/CMakeLists.txt
+++ b/libs/DeployUtils_Core/tests/CMakeLists.txt
@@ -36,4 +36,5 @@ addDeployUtilsTest("ObjdumpDependenciesParserTest")
 addDeployUtilsTest("PlatformTest")
 addDeployUtilsTest("BinaryDependenciesTest")
 addDeployUtilsTest("BinaryDependenciesLddTest")
+addDeployUtilsTest("BinaryDependenciesObjdumpTest")
 addDeployUtilsTest("FileCopierTest")
