--- a/libs/DeployUtils_Core/tests/CMakeLists.txt
+++ b/libs/DeployUtils_Core/tests/CMakeLists.txt
@@ -33,6 +33,7 @@ addDeployUtilsTest("LddWrapperTest")
 addDeployUtilsTest("ObjdumpWrapperTest")
 addDeployUtilsTest("LddDependenciesParserTest")
 addDeployUtilsTest("ObjdumpDependenciesParserTest")
+addDeployUtilsTest("ObjdumpBinaryFormatParserTest")
 addDeployUtilsTest("PlatformTest")
 addDeployUtilsTest("BinaryDependenciesTest")
 addDeployUtilsTest("BinaryDependenciesLddTest")
