In lib PlainText: some Iterator conformance fixes in StringConstIterator + added support for Boost.Spirit string() parser

--- a/libs/PlainText_Core/tests/CMakeLists.txt
+++ b/libs/PlainText_Core/tests/CMakeLists.txt
@@ -39,6 +39,7 @@ endfunction()
 
 #================= Tests ====================
 
+addPlainTextTest("BoostSpiritTraitsTest")
 addPlainTextTest("FileInputIteratorTest")
 addPlainTextTest("FileMultiPassIteratorTest")
 addPlainTextTest("StringIteratorTest")
