--- a/libs/DeployUtils_Core/tests/CMakeLists.txt
+++ b/libs/DeployUtils_Core/tests/CMakeLists.txt
@@ -34,6 +34,7 @@ addDeployUtilsTest("ObjdumpWrapperTest")
 addDeployUtilsTest("LddDependenciesParserTest")
 addDeployUtilsTest("ObjdumpDependenciesParserTest")
 addDeployUtilsTest("ObjdumpBinaryFormatParserTest")
+addDeployUtilsTest("BinaryFormatTest")
 addDeployUtilsTest("PlatformTest")
 addDeployUtilsTest("BinaryDependenciesTest")
 addDeployUtilsTest("BinaryDependenciesLddTest")
