--- a/libs/DeployUtils_Core/tests/CMakeLists.txt
+++ b/libs/DeployUtils_Core/tests/CMakeLists.txt
@@ -28,6 +28,7 @@ endfunction()
 
 addDeployUtilsTest("PathTest")
 addDeployUtilsTest("LibraryTest")
+addDeployUtilsTest("LibraryTreeTest")
 addDeployUtilsTest("LddParserTest")
 addDeployUtilsTest("LddWrapperTest")
 addDeployUtilsTest("ObjdumpWrapperTest")
