In lib DeployUtils: working on binary dependencies

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -147,12 +147,14 @@ if(WIN32 AND CMAKE_RUNTIME_OUTPUT_DIRECTORY)
     DESTINATION_DIRECTORY "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}"
     NO_WARNINGS
   )
-  
+
   mdt_copy_binary_dependencies_experimental(
     TARGET mdtitemeditor_sqlcontrollertest
     DESTINATION_DIRECTORY "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}"
+    LIBRARY_SEARCH_FIRST_PATH_LIST ${CMAKE_PREFIX_PATH}
+    PATH_SUFFIXES "bin" "qt5/bin"
   )
-  
+
   # If we are doing cross-compilation,
   # recusrsive resolving do not work
   # We have to add manually libraries that are missing
