Removed obselete parts in DeployUtils

--- a/libs/DeployUtils_Core/src/CMakeLists.txt
+++ b/libs/DeployUtils_Core/src/CMakeLists.txt
@@ -1,7 +1,7 @@
 
 # List of source files
 set(SOURCE_FILES
-    Mdt/DeployUtils/SettingsCommandLineParser.cpp
+#     Mdt/DeployUtils/SettingsCommandLineParser.cpp
     
     Mdt/DeployUtils/LibraryVersion.cpp
     Mdt/DeployUtils/LibraryName.cpp
