--- a/tools/MdtDeployUtils/CMakeLists.txt
+++ b/tools/MdtDeployUtils/CMakeLists.txt
@@ -1,6 +1,6 @@
 # Project file for Mdt
 
-add_subdirectory(src)
+# add_subdirectory(src)
 # add_subdirectory(tests)
 # add_subdirectory(translations)
 
