--- a/libs/DeployUtils_Core/src/CMakeLists.txt
+++ b/libs/DeployUtils_Core/src/CMakeLists.txt
@@ -1,8 +1,6 @@
 
 # List of source files
 set(SOURCE_FILES
-#     Mdt/DeployUtils/SettingsCommandLineParser.cpp
-    
     Mdt/DeployUtils/LibraryVersion.cpp
     Mdt/DeployUtils/LibraryName.cpp
     Mdt/DeployUtils/LibraryInfo.cpp
@@ -31,6 +29,9 @@ set(SOURCE_FILES
     Mdt/DeployUtils/BinaryDependenciesLdd.cpp
     Mdt/DeployUtils/BinaryDependenciesObjdump.cpp
     Mdt/DeployUtils/FileCopier.cpp
+    Mdt/DeployUtils/QtLibrary.cpp
+    Mdt/DeployUtils/QtModule.cpp
+    Mdt/DeployUtils/QtModuleList.cpp
 )
 
 find_package(Qt5 COMPONENTS Core)
@@ -49,7 +50,7 @@ mdt_add_library(
   NAME DeployUtils_Core
   SOURCE_FILES ${SOURCE_FILES}
   HEADERS_DIRECTORY .
-  LINK_DEPENDENCIES Application Error PlainText_Core Algorithm Qt5::Core
+  LINK_DEPENDENCIES Application Error PlainText_Core Algorithm Expected Qt5::Core
 )
 mdt_set_library_description(
   NAME DeployUtils_Core
