--- a/libs/DeployUtils_Core/tests/CMakeLists.txt
+++ b/libs/DeployUtils_Core/tests/CMakeLists.txt
@@ -41,3 +41,5 @@ addDeployUtilsTest("BinaryDependenciesTest")
 addDeployUtilsTest("BinaryDependenciesLddTest")
 addDeployUtilsTest("BinaryDependenciesObjdumpTest")
 addDeployUtilsTest("FileCopierTest")
+addDeployUtilsTest("QtLibraryTest")
+target_compile_definitions(mdtdeployutils_qtlibrarytest PRIVATE PREFIX_PATH=${CMAKE_PREFIX_PATH})
