In lib DeployUtils: working on QtLibrary plugins part

--- a/libs/DeployUtils_Core/tests/CMakeLists.txt
+++ b/libs/DeployUtils_Core/tests/CMakeLists.txt
@@ -42,4 +42,4 @@ addDeployUtilsTest("BinaryDependenciesLddTest")
 addDeployUtilsTest("BinaryDependenciesObjdumpTest")
 addDeployUtilsTest("FileCopierTest")
 addDeployUtilsTest("QtLibraryTest")
-target_compile_definitions(mdtdeployutils_qtlibrarytest PRIVATE PREFIX_PATH=${CMAKE_PREFIX_PATH})
+target_compile_definitions(mdtdeployutils_qtlibrarytest PRIVATE PREFIX_PATH="${CMAKE_PREFIX_PATH}")
