Implemented finding Qt plugins dependencies in deploy utils

--- a/libs/DeployUtils_Core/tests/CMakeLists.txt
+++ b/libs/DeployUtils_Core/tests/CMakeLists.txt
@@ -38,6 +38,7 @@ addDeployUtilsTest("ObjdumpBinaryFormatParserTest")
 addDeployUtilsTest("BinaryFormatTest")
 addDeployUtilsTest("PlatformTest")
 addDeployUtilsTest("BinaryDependenciesTest")
+target_compile_definitions(mdtdeployutils_binarydependenciestest PRIVATE PREFIX_PATH="${CMAKE_PREFIX_PATH}")
 addDeployUtilsTest("BinaryDependenciesLddTest")
 addDeployUtilsTest("BinaryDependenciesObjdumpTest")
 addDeployUtilsTest("FileCopierTest")
